add GC overhead limit exceeded lab